Fixed opacity of Firefox - select and input text fields
[CE-775] Fix error placeholder too light in Firefox (and it seems Safari too?)

Remove \!important from CSS files

--- a/templates/src/components/field-input/fieldInput.css
+++ b/templates/src/components/field-input/fieldInput.css
@@ -58,3 +58,16 @@
 .stx-input:hover {
     box-shadow: none;
 }
+
+input.stx-input__input-element::-webkit-input-placeholder,
+input.stx-input__input-element:-moz-placeholder,
+input.stx-input__input-element::-moz-placeholder,
+input.stx-input__input-element:-ms-input-placeholder,
+input.stx-input__input-element::-ms-input-placeholder {
+    color: inherit;
+}
+
+input.stx-input__input-element:-moz-placeholder,
+input.stx-input__input-element::-moz-placeholder {
+    opacity: 1;
+}
